# QmlStudy

./: .gitignore  CMakeLists.txt  INSTALL.md  Main.qml  README.md  main.cpp  qml.qrc
components/: ChartViewPanel.qml  LeftDockPanel.qml  Main.qml  MainMenuBar.qml  MainToolBar.qml  RightToolBar.qml  TreeView.qml
src/: chartpanel.cpp  chartpanel.h  dockwindow.cpp  dockwindow.h  main.cpp  righttoolbar.cpp  righttoolbar.h  treemodel.cpp  treemodel.h  treeview.cpp  treeview.h
